--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="card-body">
                         <h5 class="card-title">License</h5>
                         <ul>
-                            <li>MH2p_SD_ModKit is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.</li>
+                            <li>MH2p_SD_ModKit is licensed under <a target="_blank" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.</li>
                             <li>NOT FOR COMMERCIAL USE</li>
                         </ul>
                         <h5 class="card-title">Compatible Vehicles</h5>
@@ -67,8 +67,8 @@
                                         <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
                                     </svg>
                                 </a></td>
-                                <td><a href="https://github.com/LawPaul/MH2p_SD_ModKit">GitHub</a></td>
-                                <td><a href="https://github.com/LawPaul">LawPaul</a></td>
+                                <td><a target="_blank" href="https://github.com/LawPaul/MH2p_SD_ModKit">GitHub</a></td>
+                                <td><a target="_blank" href="https://github.com/LawPaul">LawPaul</a></td>
                                 <td>allows for modifying the MH2p unit used in some Volkswagen AG vehicles using only an SD card</td>
                             </tr>
                             </tbody>
@@ -137,8 +137,8 @@
                                             <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
                                         </svg>
                                     </a></td>
-                                    <td><a href="https://github.com/LawPaul/PCM5_CarPlay_FullScreen">GitHub</a></td>
-                                    <td><a href="https://github.com/LawPaul">LawPaul</a></td>
+                                    <td><a target="_blank" href="https://github.com/LawPaul/PCM5_CarPlay_FullScreen">GitHub</a></td>
+                                    <td><a target="_blank" href="https://github.com/LawPaul">LawPaul</a></td>
                                     <td>Changes CarPlay to true fullscreen 1920x720 on PCM5</td>
                                 </tr>
                             </tbody>
@@ -197,11 +197,11 @@
                     <div class="card-body">
                         <p class="card-text">The users and tools that helped me make this happen.</p>
                         <ul>
-                            <li>UncleMacan (<a href="https://www.macanforum.com/members/unclemacan.173728/">Macan Forum</a>): worked together on Porsche CarPlay true fullscreen; wanting an easier installation method got me started making SD ModKit</li>
-                            <li>lprot (<a href="https://github.com/lprot">GitHub</a>, <a href="https://www.drive2.ru/users/lprot/">DRIVE2</a>): general platform knowledge, MH2p Toolkit</li>
-                            <li>MacanPWR (<a href="https://www.macanforum.com/members/macanpwr.174775/">Macan Forum</a>): macOS SD card notes</li>
-                            <li><a href="https://github.com/NationalSecurityAgency/ghidra">Ghidra</a>: reverse engineering MH2p binaries</li>
-                            <li><a href="https://github.com/Col-E/Recaf">Recaf</a>: reverse engineering & modifying for CarPlay true fullscreen</li>
+                            <li>UncleMacan (<a target="_blank" href="https://www.macanforum.com/members/unclemacan.173728/">Macan Forum</a>): worked together on Porsche CarPlay true fullscreen; wanting an easier installation method got me started making SD ModKit</li>
+                            <li>lprot (<a target="_blank" href="https://github.com/lprot">GitHub</a>, <a target="_blank" href="https://www.drive2.ru/users/lprot/">DRIVE2</a>): general platform knowledge, MH2p Toolkit</li>
+                            <li>MacanPWR (<a target="_blank" href="https://www.macanforum.com/members/macanpwr.174775/">Macan Forum</a>): macOS SD card notes</li>
+                            <li><a target="_blank" href="https://github.com/NationalSecurityAgency/ghidra">Ghidra</a>: reverse engineering MH2p binaries</li>
+                            <li><a target="_blank" href="https://github.com/Col-E/Recaf">Recaf</a>: reverse engineering & modifying for CarPlay true fullscreen</li>
                             <li>"experts" selling their "services": motivation to make CarPlay true fullscreen & SD ModKit available to all for free</li>
                         </ul>
                     </div>
@@ -211,10 +211,10 @@
                         <h5 class="card-title">Contact</h5>
                     </div>
                     <div class="card-body">
-                        <a class="card-link" href="https://github.com/LawPaul">GitHub</a>
-                        <a class="card-link" href="https://www.macanforum.com/members/carmines.174281/">Macan Forum</a>
-                        <a class="card-link" href="https://www.drive2.ru/users/lawsen/">DRIVE2</a>
-                        <a class="card-link" href="https://discordapp.com/users/lawsen5734">Discord</a>
+                        <a class="card-link" target="_blank" href="https://github.com/LawPaul">GitHub</a>
+                        <a class="card-link" target="_blank" href="https://www.macanforum.com/members/carmines.174281/">Macan Forum</a>
+                        <a class="card-link" target="_blank" href="https://www.drive2.ru/users/lawsen/">DRIVE2</a>
+                        <a class="card-link" target="_blank" href="https://discordapp.com/users/lawsen5734">Discord</a>
                     </div>
                 </div>
             </div>
