--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>PCM5 CarPlay FullScreen</td>
+                                    <td>PCM5 CarPlay Full Screen</td>
                                     <td><a href="https://github.com/LawPaul/PCM5_CarPlay_FullScreen/archive/refs/heads/main.zip">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
                                             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
@@ -139,7 +139,19 @@
                                     </a></td>
                                     <td><a target="_blank" href="https://github.com/LawPaul/PCM5_CarPlay_FullScreen">GitHub</a></td>
                                     <td><a target="_blank" href="https://github.com/LawPaul">LawPaul</a></td>
-                                    <td>Changes CarPlay to true fullscreen 1920x720 on PCM5</td>
+                                    <td>Changes CarPlay to true full screen 1920x720 on PCM5</td>
+                                </tr>
+                                <tr>
+                                    <td>PCM5 CarPlay Windowed Full Screen</td>
+                                    <td><a href="https://github.com/LawPaul/PCM5_CarPlay_WindowedFullScreen/archive/refs/heads/main.zip">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                                            <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+                                            <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
+                                        </svg>
+                                    </a></td>
+                                    <td><a target="_blank" href="https://github.com/LawPaul/PCM5_CarPlay_WindowedFullScreen">GitHub</a></td>
+                                    <td><a target="_blank" href="https://github.com/LawPaul">LawPaul</a></td>
+                                    <td>Changes CarPlay to windowed full screen on PCM5 (still shows left and top menu bars)</td>
                                 </tr>
                             </tbody>
                         </table>
