updated vehicle install instructions

--- a/index.html
+++ b/index.html
@@ -168,28 +168,12 @@
                         </ul>
                         <h5 class="card-title">Instructions</h5>
                         <ul>
-                            <li>launch red engineering menu
-                                <ul>
-                                    <li>long press MENU button or two finger touch in top right of screen</li>
-                                </ul>
-                            </li>
-                            <img src="img/rem_open.png" class="img-fluid">
-                            <li>insert SD card into vehicle</li>
-                            <li>select "Update" using the dial</li>
-                            <img src="img/rem_update.png" class="img-fluid">
-                            <li>select the SD card</li>
-                            <img src="img/rem_sd.png" class="img-fluid">
-                            <li>wait for "Read manifest files"</li>
-                            <li>scroll to the bottom and "Start update"</li>
-                            <img src="img/rem_start.png" class="img-fluid">
-                            <li>wait for the update to run</li>
-                            <img src="img/rem_summary.png" class="img-fluid">
-                            <li>scroll to the bottom and "Resume"</li>
-                            <img src="img/rem_resume.png" class="img-fluid">
-                            <li>select "Quit"</li>
-                            <img src="img/rem_quit.png" class="img-fluid">
-                            <li>MH2p will reboot into normal mode with mods installed/uninstalled</li>
+                            <li>start vehicle</li>
+                            <li>insert SD card</li>
+                            <li>update installs automatically: MH2p will reboot a few times and show some red engineering menu pages</li>
+                            <li>when update is done installing, a prompt will say "Please remove update media"</li>
                             <li>remove SD card from vehicle</li>
+                            <li>MH2p will reboot into normal mode with mods installed/uninstalled</li>
                             <li>on PC, can check SD card <code>/Logs</code> folder which has logs from each mod being installed</li>
                         </ul>
                     </div>
