added 19-21 Porsche Panamera to supported vehicles list

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                                 <td>Porsche</td>
                                 <td>Macan</td>
                             </tr>
+                            <tr>
+                                <td>19-21</td>
+                                <td>Porsche</td>
+                                <td>Panamera</td>
+                            </tr>
                             </tbody>
                         </table>
                         <h5 class="card-title">Necessary Hardware</h5>
