--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                             </thead>
                             <tbody>
                             <tr>
+                                <td>20-22</td>
+                                <td>Porsche</td>
+                                <td>992</td>
+                            </tr>
+                            <tr>
                                 <td>19-25</td>
                                 <td>Porsche</td>
                                 <td>Macan</td>
