--- a/index.html
+++ b/index.html
@@ -29,26 +29,30 @@
                         <table class="table table-striped table-hover">
                             <thead>
                             <tr>
-                                <th scope="col">Year</th>
+                                <th scope="col">Model Year</th>
                                 <th scope="col">Make</th>
                                 <th scope="col">Model</th>
+                                <th scope="col">MH2p</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
-                                <td>20-22</td>
+                                <td>2020 - 2022</td>
                                 <td>Porsche</td>
                                 <td>992</td>
+                                <td>PCM 5</td>
                             </tr>
                             <tr>
-                                <td>19-25</td>
+                                <td>2019 - 2025</td>
                                 <td>Porsche</td>
                                 <td>Macan</td>
+                                <td>PCM 5</td>
                             </tr>
                             <tr>
-                                <td>19-21</td>
+                                <td>2019 - 2021</td>
                                 <td>Porsche</td>
                                 <td>Panamera</td>
+                                <td>PCM 5</td>
                             </tr>
                             </tbody>
                         </table>
@@ -79,7 +83,7 @@
                                 </a></td>
                                 <td><a target="_blank" href="https://github.com/LawPaul/MH2p_SD_ModKit">GitHub</a></td>
                                 <td><a target="_blank" href="https://github.com/LawPaul">LawPaul</a></td>
-                                <td>allows for modifying the MH2p unit used in some Volkswagen AG vehicles using only an SD card</td>
+                                <td>allows for modifying the MH2p unit used in some Volkswagen AG vehicles using only an SD card or flash drive</td>
                             </tr>
                             </tbody>
                         </table>
@@ -158,7 +162,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>PCM5 CarPlay Full Screen</td>
+                                    <td>PCM 5 CarPlay Full Screen</td>
                                     <td><a href="https://github.com/LawPaul/PCM5_CarPlay_FullScreen/archive/refs/heads/main.zip">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
                                             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
@@ -167,10 +171,10 @@
                                     </a></td>
                                     <td><a target="_blank" href="https://github.com/LawPaul/PCM5_CarPlay_FullScreen">GitHub</a></td>
                                     <td><a target="_blank" href="https://github.com/LawPaul">LawPaul</a></td>
-                                    <td>Changes CarPlay to true full screen 1920x720 on PCM5</td>
+                                    <td>Changes CarPlay to true full screen 1920x720 on PCM 5</td>
                                 </tr>
                                 <tr>
-                                    <td>PCM5 CarPlay Windowed Full Screen</td>
+                                    <td>PCM 5 CarPlay Windowed Full Screen</td>
                                     <td><a href="https://github.com/LawPaul/PCM5_CarPlay_WindowedFullScreen/archive/refs/heads/main.zip">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
                                             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
@@ -179,7 +183,7 @@
                                     </a></td>
                                     <td><a target="_blank" href="https://github.com/LawPaul/PCM5_CarPlay_WindowedFullScreen">GitHub</a></td>
                                     <td><a target="_blank" href="https://github.com/LawPaul">LawPaul</a></td>
-                                    <td>Changes CarPlay to windowed full screen on PCM5 (still shows left and top menu bars)</td>
+                                    <td>Changes CarPlay to windowed full screen on PCM 5 (still shows left and top menu bars)</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -263,7 +267,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingThree">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                        I installed PCM5 CarPlay Full Screen and CarPlay does not show up.
+                                        I installed PCM 5 CarPlay Full Screen and CarPlay does not show up.
                                     </button>
                                 </h2>
                                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionTroubleshooting">
