--- a/index.html
+++ b/index.html
@@ -29,29 +29,40 @@
                         <table class="table table-striped table-hover">
                             <thead>
                             <tr>
-                                <th scope="col">Model Year</th>
+                                <th scope="col">Year</th>
                                 <th scope="col">Make</th>
                                 <th scope="col">Model</th>
+                                <th scope="col">Code</th>
                                 <th scope="col">MH2p</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
-                                <td>2020 - 2022</td>
+                                <td>2019 - 2022</td>
                                 <td>Porsche</td>
+                                <td>911</td>
                                 <td>992</td>
+                                <td>PCM 5</td>
+                            </tr>
+                            <tr>
+                                <td>2019 - 2022</td>
+                                <td>Porsche</td>
+                                <td>Cayenne</td>
+                                <td>E3</td>
                                 <td>PCM 5</td>
                             </tr>
                             <tr>
                                 <td>2019 - 2025</td>
                                 <td>Porsche</td>
                                 <td>Macan</td>
+                                <td>95B</td>
                                 <td>PCM 5</td>
                             </tr>
                             <tr>
-                                <td>2019 - 2021</td>
+                                <td>2019 - 2022</td>
                                 <td>Porsche</td>
                                 <td>Panamera</td>
+                                <td>976</td>
                                 <td>PCM 5</td>
                             </tr>
                             </tbody>
@@ -215,12 +226,12 @@
                                         <ul>
                                             <li>hidden files starting with "." are created automatically; these must be removed or the auto update will not run
                                                 <ul>
-                                                    <li>option A:
+                                                    <li>option A (recommended):
                                                         <ul>
                                                             <li>use the free 30 day trial of <a target="_blank" href="https://www.zeroonetwenty.com/blueharvest/">BlueHarvest</a> to clean the update media immediately before physically removing it</li>
                                                         </ul>
                                                     </li>
-                                                    <li>option B:
+                                                    <li>option B (not recommended - only one success story):
                                                         <ul>
                                                             <li>manually delete these hidden files prior to removing the update media</li>
                                                             <li>If you don't see the hidden files, press Command then Shift then . (period) to display them (they will show up slightly greyed out)</li>
@@ -280,11 +291,11 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingThree">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                        I installed PCM 5 CarPlay Full Screen and CarPlay does not show up.
+                                        I received error 134 part way through the update.
                                     </button>
                                 </h2>
                                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionTroubleshooting">
-                                    <div class="accordion-body">Old PCM versions (MH2p_US_P0416_P9830, MH2p_AS_PO416_P9817) are not currently compatible with the full screen mod. Use the windowed full screen mod instead for now.</div>
+                                    <div class="accordion-body">Use a different update media; it is likely yours is faulty.</div>
                                 </div>
                             </div>
                         </div>
