--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
             <div class="col">
                 <div class="card m-3">
                     <div class="card-header">
+                        <h5 class="card-title">Overview</h5>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">Want to modify the head unit on your Volkswagen Group vehicle? This simple process can be summarized by these four steps:</p>
+                        <ul>
+                            <li>download mod kit (check compatible vehicles)</li>
+                            <li>download desired mods (check compatible brand)</li>
+                            <li>extract files to update media (SD card or flash drive)</li>
+                            <li>insert update media into vehicle</li>
+                        </ul>
+                        <p class="card-text">To begin, follow the detailed instructions below!</p>
+                    </div>
+                </div>
+                <div class="card m-3">
+                    <div class="card-header">
                         <h5 class="card-title">ModKit</h5>
                     </div>
                     <div class="card-body">
@@ -162,8 +177,8 @@
                             <thead>
                             <tr>
                                 <th scope="col">Name</th>
-                                <th scope="col">Package</th>
-                                <th scope="col">Source</th>
+                                <th scope="col">Pkg</th>
+                                <th scope="col">Src</th>
                                 <th scope="col">Author</th>
                                 <th scope="col">Description</th>
                             </tr>
@@ -177,7 +192,13 @@
                                         <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
                                     </svg>
                                 </a></td>
-                                <td><a target="_blank" href="https://github.com/LawPaul/MH2p_SD_ModKit">GitHub</a></td>
+                                <td>
+                                    <a target="_blank" href="https://github.com/LawPaul/MH2p_SD_ModKit">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                                        </svg>
+                                    </a>
+                                </td>
                                 <td><a target="_blank" href="https://github.com/LawPaul">LawPaul</a></td>
                                 <td>allows for modifying the MH2p unit used in some Volkswagen AG vehicles using only an SD card or flash drive</td>
                             </tr>
@@ -277,7 +298,13 @@
                                             <path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1z"/>
                                         </svg>
                                     </a></td>
-                                    <td><a target="_blank" href="https://github.com/LawPaul/MH2p_CarPlay_FullScreen">GitHub</a></td>
+                                    <td>
+                                        <a target="_blank" href="https://github.com/LawPaul/MH2p_CarPlay_FullScreen">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                                            </svg>
+                                        </a>
+                                    </td>
                                     <td><a target="_blank" href="https://github.com/LawPaul">LawPaul</a></td>
                                     <td>Changes CarPlay to true full screen</td>
                                     <td>
@@ -308,7 +335,13 @@
                                             <path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1z"/>
                                         </svg>
                                     </a></td>
-                                    <td><a target="_blank" href="https://github.com/LawPaul/MH2p_CarPlay_WindowedFullScreen">GitHub</a></td>
+                                    <td>
+                                        <a target="_blank" href="https://github.com/LawPaul/MH2p_CarPlay_WindowedFullScreen">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                                            </svg>
+                                        </a>
+                                    </td>
                                     <td><a target="_blank" href="https://github.com/LawPaul">LawPaul</a></td>
                                     <td>Changes CarPlay to windowed full screen on (still shows sidebar)</td>
                                     <td>
