Android Auto troubleshooting

--- a/index.html
+++ b/index.html
@@ -384,6 +384,16 @@
                                     <div class="accordion-body">Contact me for the next steps. It is likely easy for me to port it to your vehicle and your effort will help others!</div>
                                 </div>
                             </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingSeven">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
+                                        I activated Android Auto but nothing happens when I connect my phone.
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionTroubleshooting">
+                                    <div class="accordion-body">If iPhone was ever connected, you must factory reset MH2p (menus depend on year/make/model, ex: Car>Control>System>Factory settings).</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
