--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionTroubleshooting">
-                                    <div class="accordion-body">Ensure you have your desired mods correctly installed in the <code>/Mods</code> folder in addition to the ModKit.</div>
+                                    <div class="accordion-body">Ensure you have your desired mods correctly installed in the <code>/Mods</code> folder in addition to the ModKit. Each mod's folder must contain at least one of the following folders: <code>Update</code>, <code>Post</code>, <code>Persist</code>.</div>
                                 </div>
                             </div>
                             <div class="accordion-item">
