--- a/index.html
+++ b/index.html
@@ -726,6 +726,7 @@
                         <a class="card-link" target="_blank" href="https://www.macanforum.com/members/carmines.174281/">Macan Forum</a>
                         <a class="card-link" target="_blank" href="https://rennlist.com/forums/members/333232-carmines.html">Rennlist</a>
                         <a class="card-link" target="_blank" href="https://www.clubtouareg.com/members/carmines-lawpaul.268203/">Club Touareg</a>
+                        <a class="card-link" target="_blank" href="https://www.audiworld.com/forums/members/carmines-lawpaul--471091/">Audi World</a>
                         <a class="card-link" target="_blank" href="https://t.me/Law_Paul">Telegram</a>
                         <a class="card-link" target="_blank" href="https://www.drive2.ru/users/lawsen/">DRIVE2</a>
                     </div>
