--- a/index.html
+++ b/index.html
@@ -399,6 +399,16 @@
                                     <div class="accordion-body">If iPhone was ever connected, you must factory reset MH2p (menus depend on year/make/model, ex: Car>Control>System>Factory settings).</div>
                                 </div>
                             </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingEight">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEight" aria-expanded="false" aria-controls="flush-collapseEight">
+                                        I activated Apple CarPlay but wireless does not work.
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseEight" class="accordion-collapse collapse" aria-labelledby="flush-headingEight" data-bs-parent="#accordionTroubleshooting">
+                                    <div class="accordion-body">Ensure Wi-Fi is enabled on your iPhone. If the issue persists, your vehicle also needs to have a working navigation database and your vehicle needs to be in a country where 5 GHz Wi-Fi is allowed.</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
